# mnist-neural-network-c

./: CMakeLists.txt  Makefile  README.md
src/: MNIST_Images.c  MNIST_Labels.c  Matrix.c  Neural_Network.c  Neural_Network_Threading.c  inference.c  main.c  training.c  utils.c
src/include/: MNIST_Images.h  MNIST_Labels.h  Matrix.h  Neural_Network.h  Neural_Network_Threading.h  inference.h  main.h  training.h  utils.h
